1. What is this?
----------------
This is a test build of Modplug Tracker. 
It is unfinished, do not expect to be able to compose with this version safely. But by all means try, and let me know what goes wrong. 


2. What's new in this build?
----------------------------
.: bug fix
+: new feature
-: known issue / regression
/: change
?: other
(tx XYZ): thanks to XYZ for telling me about the bug

. v 1.17.02.21
  . <rewbs> Drags on Orderlist mark song as modified.
  . <rewbs> Fixed auto-deletion of excess autosaves where song has no associated directory.
  . <rewbs> Fixed option in colour setting tab to override time sig highlighting with custom highlight positions (was always getting reset to time sig highlighting before).
  . <rewbs> Fixes to play note from VST gui.
  . <rewbs> Second attempt at fixing stuck VSTi notes when playing during playback.
  . <rewbs> If an effect is removed, channels pointing to that effect now display "[empty]"
  . <rewbs> Full range song pre-amp is now saved in song with both "XM" and "IT".
  / <rewbs> Added option to hide unavailable options in pattern ctx menu, rather than greying them out.
  

. v 1.17.02.20
  + <rewbs> OpenMPT version saved in file, visible in song settings dialog.
  / <rewbs> Enabled XP themes. 
  . <rewbs> Keyconfig loader no longer reports errors in bad key config file after the 10th error, to avoid reporting hundred of errors if for example you try to load a binary by mistake.
  . <rewbs> Song is marked as modified on tempo & volume slider move in general tab, as well as on drag selection.
  . <rewbs> Correct pattern name displayed on first opening of pattern editor.
  . <rewbs> Tool tips restored on pattern editor.
  . <rewbs> The instrument and sample tab play buttons should no longer stop the song.
  / <rewbs> Resolution of plugin default GUI parameter slider increased from 100 to 1000. I couldn't get the per-thousand symbol to display yet. :(