@@ -25,7 +25,7 @@ class CPerformanceCounter;
 #define MAX_AUDIO_BUFFERSIZE		32768	// 32K buffers max
 #define KEYBOARDMAP_LENGTH			(3*12+2)
 #define MAINFRAME_TITLE				"Open Modplug Tracker"
-#define MPTRACK_VERSION				0x01170221
+#define MPTRACK_VERSION				0x01170222
 #define INFORMAL_VERSION			"1.17RC2"
 
 
