@@ -13,6 +13,8 @@ It is unfinished, do not expect to be able to compose with this version safely. 
 ?: other
 (tx XYZ): thanks to XYZ for telling me about the bug
 
+  . <rewbs> Minor refresh fix to graphical parameter editor.
+
 . v 1.17.02.21
   . <rewbs> Drags on Orderlist mark song as modified.
   . <rewbs> Fixed auto-deletion of excess autosaves where song has no associated directory.
